--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,95 +1,239 @@
 <style>
 
-    body {
-        background-color: #efefef;
-        background-image: url(assets/images/congruent_pentagon.png);
-    }
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    margin: 0;
+    line-height: 150%;
+    font-size: 18px;
+}
 
-    header {
-        background-color:#ffffff;
-        float:left;
-        padding: 5px;
-        color: eef7f6;
-    }
+#wrapper {
+    margin-left:auto;
+    margin-right:auto;
+    width:100%;
+    background-image: url('/../images/spiration_dark.png');
+}
 
-    footer{
-        background-color:#666666
-        ;
-    }
-
-    nav {
-        float: right;
-        text-alight: right;
-    }
-
-    aside {
-        float: left;
-        width: "220px";
-        padding: 25px;
-    }
-
-    section {
-        float: left;
-        width:"600px";
-        padding: 25px;
-        background-color: #ffffff;
-    }
-
-    h1 {
-         font-family: 'Georgia', Times, Times New Roman, serif;
-         color: #4aaaa5;
-    }
-
-    p, form, a {
-        font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-        color: #777777;
-    }
+html, body {
+    height: 100%;
+}
 
 
-    .bigger {
-        font-size: 36px;
-    }
+h2 {
+    font-size: 24px;
+    color: #4aaaa5;
+    font-family: Georgia, Times, "Times New Roman", serif; 
+}
 
-    .redtext {
-        color: red;
-    }
+/*--------------HEADER-----------------*/
+.header {
+    border: 1px solid #cccccc;
+    width: 100%;
+    min-width: 660px;
+    height: 80px;
+    min-height: 80px;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: white;
+}
+    
 
-    .bluetext {
-        color: blue;
-    }
-
-    .greentext {
-        color: green;
-    }
-
-    .orangetext {
-        color: orange;
-        font-size: 36px;
-        font-weight: bold;
-    }
-
-
-    .center {
+.name-block {
+    font-family: Georgia, Times, "Times New Roman", serif; 
+    float: left;
+    color: #eee;
+    font-size: 28px;
     text-align: center;
-    }
+    border: 5px solid #4aaaa5;
+    background-color: #4aaaa5;
+    padding: 20px;
+    width: 15%
+    height: 80px; 
+    left: 50px;
+    margin-left: 210px;
+}
 
-    .thick {
+/*----------NAVIGATION----------*/
+.topnav li {
+    display: inline;
+}
+    
+.topnav {
+    text-align: right;
+    padding: 10px;
+    height: 10px;
+    min-width: 300px;
+    margin-right: 105px;
+}
+
+.topnav a {
+    color: #5a5a5a
+    text-align: center;
+    padding: 9px;
+    width: 270px;
+}
+
+.topnav a: hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+/*------------Main section and sidebar------------ */
+
+.container {
+    clear: both;
+    width: 940px;
+    margin: 0 auto;
+    flex: 1 0 auto;
+    margin-top: 35px;
+}
+
+
+.main-section, .sidebar {
+float: left;
+border: 1px solid #dddddd;
+padding: 25px 25px 25px 25px
+}
+
+.main-section {
+    width: 543px;
+    max-width: 493px;
+    min-height: 350px;
+    margin-right:  45px;
+    margin-left: 10px;
+    margin-bottom: 50px;
+    background-color: white;
+}
+
+.sidebar{
+    width: 198px;
+    max-width: 198px;
+    min-height: 120px;
+    text-align: center;
+    background-color: white;
+}
+
+
+
+p, form, a {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    line-height: 150%;
+}
+
+/*----------SOCIAL ICONS------------*/
+#github-logo {
+    width: 40px;
+    height: 40px;
+}
+
+#linkedin-logo {
+    width: 40px;
+    height: 40px;
+}
+
+#stackoverflow-logo{
+    width: 38px;
+    height: 35.5px;
+}
+
+/*------------PORTFOLIO---------------*/
+.portfolio-container {
+  width: 500px;
+  height: 200px;
+  position: relative;
+}
+
+.image {
+   
+}
+
+#image1 {
+    width: 220px;
+    height: 220px;
+    float: left;
+    margin-left:10px;
+    margin-bottom: 20px;
+}
+
+#image2 {
+    width: 220px;
+    height: 220px;
+    float: right;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    
+
+}
+
+#image3 {
+    width: 220px;
+    height: 220px;
+    float: left;
+    margin-left:: 10px;
+    margin-bottom: 20px;
+}
+
+#image4 {
+    width: 220px;
+    height: 220px;
+    float: right;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+
+#image5 {
+    width: : 220px;
+    height: 220px;
+    float: left;
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+
+
+h3 {
+    text-align: center;
+    background-color: #4aaaa5;
+    margin: 120px 0px 20px 0px;
+    padding: 20px 20px 20px;
+    padding-top:20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px; 
+    font-family: Georgia, Times, "Times New Roman", serif; 
+    font-size: 20px;
+    color: #eee;
+}
+
+#text {
+    z-index: 100;
+    position: absolute;
+    color: white;
+    font-size: 24px;
     font-weight: bold;
-    }
+    left: 0px;
+    bottom: 1px;
+    width: 185px;
+    height: 30px;
+}
 
-    .differentfont {
-    font-family: "Times New Roman", Georgia, Serif;
-    }
+/*--------Copyright----------*/
 
-    .tiny {
-        font-size: 8px;
-    }
+.footer {
+    clear: both;
+    margin-bottom: 0;
+    background-color: #666666;
+    color: #beb5a9;
+    text-align: center;
+    padding-top: 35px;
+    padding-bottom:15px;
+    border-top: 10px solid #4aaaa5;
+    height: 50px;
+    margin-top: -50px;
+    bottom: 0;
+    width: 100%;
+}
 
-    .styledFont {
-        color: green;
-    }
-
-    #styledImage {
-        border: 5px solid orange;
-    }
 </style>
