--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
 <style>
 
 body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     margin: 0;
+    padding: 0;
     line-height: 150%;
     font-size: 18px;
 }
@@ -21,25 +22,35 @@ html, body {
 h2 {
     font-size: 24px;
     color: #4aaaa5;
-    font-family: Georgia, Times, "Times New Roman", serif; 
+    font-family: "Georgia", Times, "Times New Roman", serif; 
+    padding-bottom: 10px;
+    font-weight: 550;
 }
+
+hr {
+    border: none;
+    height: 2px;
+    background-color: #bbb7b2;
+}
+
 
 /*--------------HEADER-----------------*/
 .header {
-    border: 1px solid #cccccc;
+    border-bottom: 2px solid #cccccc;
     width: 100%;
     min-width: 1080px;
     height: 80px;
-    min-height: 80px;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 100;
-    background-color: white;
+    background-color: #fff;
+    margin-top: 0;
 }
     
 
 .name-block {
-    font-family: Georgia, Times, "Times New Roman", serif; 
+    font-family: "Georgia", Times, "Times New Roman", serif; 
     float: left;
     color: #eee;
     font-size: 28px;
@@ -47,11 +58,15 @@ h2 {
     border: 5px solid #4aaaa5;
     background-color: #4aaaa5;
     padding: 20px;
-    width: 15%;
+    width: 200px;
     height: 30px; 
     left: 50px;
     margin-left: 210px;
+    font-weight: 400;
+    position: absolute;
+    left: 0px;
 }
+
 
 /*----------NAVIGATION----------*/
 .topnav li {
@@ -68,10 +83,11 @@ h2 {
 }
 
 .topnav a {
-    color: #5a5a5a
+    color: #777777;
     text-align: center;
     padding: 9px;
     width: 270px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .topnav a:hover {
@@ -96,6 +112,7 @@ h2 {
     margin: 0 auto;
     flex: 1 0 auto;
     margin-top: 35px;
+    
 }
 
 
@@ -112,7 +129,7 @@ padding: 25px 25px 25px 25px
     margin-right:  40px;
     margin-left: 75px;
     margin-bottom: 50px;
-    background-color: white;
+    background-color: #fff;
 }
 
 .sidebar{
@@ -120,7 +137,7 @@ padding: 25px 25px 25px 25px
     max-width: 218px;
     min-height: 120px;
     text-align: center;
-    background-color: white;
+    background-color: #fff;
 }
 
 .sidebar a{
@@ -131,7 +148,7 @@ padding: 25px 25px 25px 25px
 p, form, a {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
-    line-height: 150%;
+    line-height: 180%;
 }
 
 #headshot {
@@ -141,22 +158,23 @@ p, form, a {
 
 }
 
+
 /*----------SOCIAL ICONS------------*/
 #github-logo {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
 }
 
 
 #linkedin-logo {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
 }
 
 
 #stackoverflow-logo {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
 }
 
 
@@ -166,6 +184,7 @@ p, form, a {
   height: 200px;
   position: relative;
   margin: auto;
+
 }
 
 .image {
@@ -173,18 +192,19 @@ p, form, a {
 }
 
 #image1 {
-    width: 220px;
-    height: 220px;
+    width: 230px;
+    height: 200px;
     float: left;
     margin-left:10px;
+    margin-right: 18px;
     margin-bottom: 20px;
     padding-top: 20px;
 }
 
 
 #image2 {
-    width: 220px;
-    height: 220px;
+    width: 230px;
+    height: 200px;
     float: right;
     margin-right: 10px;
     margin-bottom: 20px;
@@ -192,17 +212,18 @@ p, form, a {
 }
 
 #image3 {
-    width: 220px;
-    height: 220px;
+    width: 230px;
+    height: 200px;
     float: left;
     margin-left: 10px;
+    margin-right: 18px;
     margin-bottom: 20px;
     padding-top: 20px;
 }
 
 #image4 {
-    width: 220px;
-    height: 220px;
+    width: 230px;
+    height: 200px;
     float: right;
     margin-right: 10px;
     margin-bottom: 20px;
@@ -210,10 +231,11 @@ p, form, a {
 }
 
 #image5 {
-    width: 220px;
-    height: 220px;
+    width: 230px;
+    height: 200px;
     float: left;
     margin-left: 10px;
+    margin-right: 18px;
     margin-bottom: 20px;
     padding-top: 20px;
 }
@@ -228,7 +250,7 @@ h3 {
     padding-right: 20px;
     padding-bottom: 20px;
     padding-left: 20px; 
-    font-family: Georgia, Times, "Times New Roman", serif; 
+    font-family: "Georgia", Times, "Times New Roman", serif; 
     font-size: 20px;
     color: #eee;
 }
@@ -238,15 +260,14 @@ h3 {
     position: absolute;
     color: white;
     font-size: 24px;
-    font-weight: bold;
-    width: 180px;
+    width: 190px;
     height: 30px;
 }
 
 .project1 {
     position: absolute;
     left: 10px;
-    top:20px;
+    top:2px;
 }
 
 .project1:hover {
@@ -260,7 +281,7 @@ h3 {
 .project2 {
     position: absolute;
     right: 10px;
-    top:20px;
+    top:2px;
 }
 
 .project2:hover {
@@ -275,7 +296,7 @@ h3 {
 .project3 {
     position: absolute;
     left: 10px;
-    top: 280px;
+    top: 240px;
 }
 
 .project3:hover {
@@ -289,7 +310,7 @@ h3 {
 .project4 {
     position: absolute;
     right: 10px;
-    top: 280px;
+    top: 240px;
 }
 
 .project4:hover {
@@ -304,7 +325,7 @@ h3 {
 .project5 {
     position: absolute;
     left: 10px;
-    top: 540px;
+    top: 480px;
 }
 
 .project5:hover {
@@ -325,6 +346,7 @@ h3 {
     padding: 10px;
     width: 100px;
     color: white;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 #submit-button:hover{
@@ -333,6 +355,15 @@ h3 {
 
 #submit-button:active {
     background-color: green;
+}
+
+.form-length {
+    width: 100%;
+    height: 25px;
+}
+
+textarea.form-length {
+    height: 175px;
 }
 
 
@@ -345,7 +376,7 @@ h3 {
     clear: both;
     margin-bottom: 0;
     background-color: #666666;
-    color: white;
+    color: #fff;
     text-align: center;
     padding-top: 35px;
     padding-bottom:15px;
@@ -354,6 +385,7 @@ h3 {
     margin-top: -50px;
     bottom: 0;
     width: 100%;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 </style>
